# Master-s_Thesis2

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
apps/: jomon_period.cpp  jomon_viewer.cpp
include/jomon/: autocorr2d.hpp  config.hpp  detrend.hpp  face_extract.hpp  height_map.hpp  mesh_types.hpp  period_estimator.hpp  ply_io.hpp
scripts/: bootstrap_vcpkg.ps1  bootstrap_vcpkg.sh
src/: autocorr2d.cpp  detrend.cpp  face_extract.cpp  height_map.cpp  period_estimator.cpp  ply_io.cpp
tests/: synthetic_periodic.cpp
